<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/user_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        android:scaleType="centerInside"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/user_name"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconDrawable="@drawable/outline_clear"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_photo"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textAppearance="@style/Secondary"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_phone"
        app:counterEnabled="true"
        app:counterMaxLength="13"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textAppearance="@style/Secondary"
            android:background="@color/violet"
            android:singleLine="true"/>
        
    </com.google.android.material.textfield.TextInputLayout>
    
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_phone"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textAppearance="@style/Primary"
            />

        <RadioButton
            android:id="@+id/male_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textAppearance="@style/Primary"/>

        <RadioButton
            android:id="@+id/female_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textAppearance="@style/Primary"/>

    </RadioGroup>

<com.google.android.material.switchmaterial.SwitchMaterial
    android:id="@+id/switch_notification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/receive_notifications"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/radio_group"/>

<com.google.android.material.checkbox.MaterialCheckBox
    android:id="@+id/authorization_notification"
    style="@style/Widget.Material3.CompoundButton.CheckBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/about_authorization"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:buttonTint="@color/turquoise"
    app:layout_constraintTop_toBottomOf="@+id/switch_notification"/>

 <com.google.android.material.checkbox.MaterialCheckBox
     android:id="@+id/notification_about_products"
     style="@style/Widget.Material3.CompoundButton.CheckBox"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:text="@string/about_products"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:buttonTint="@color/turquoise"
     app:layout_constraintTop_toBottomOf="@+id/authorization_notification"/>

<TextView
    android:id="@+id/points"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    app:layout_constraintTop_toBottomOf="@+id/notification_about_products"
    app:layout_constraintStart_toStartOf="@+id/notification_about_products"
    android:text="@string/points"
    android:textAppearance="@style/Primary" />

<TextView
    android:id="@+id/number_of_points"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    app:layout_constraintTop_toBottomOf="@+id/notification_about_products"
    app:layout_constraintEnd_toEndOf="@+id/notification_about_products"
    android:text="@string/number_of_points_scored"
    android:textAppearance="@style/Primary_2" />

<com.google.android.material.progressindicator.LinearProgressIndicator
    android:id="@+id/linear_progress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/points"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:progress="50"
    app:indicatorColor="@color/dark_violet"
    app:trackColor="@color/light_purple"
    app:trackThickness="5dp"/>

<Button
    android:id="@+id/save_button"
    android:enabled="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/save"
    app:layout_constraintTop_toBottomOf="@+id/linear_progress"
    android:layout_margin="8dp"
    android:textAppearance="@style/Button"/>


</androidx.constraintlayout.widget.ConstraintLayout>